--- a/config/settings.tex
+++ b/config/settings.tex
@@ -38,25 +38,25 @@
 %
 % Tulis nama Anda
 % Kosongkan penulisDua dan penulisTiga jika Anda melaksanakan tugas akhir/laporan secara individu
-\def\penulisSatu{Nama Lengkap Anda 1} % nama lengkap penulis pertama
+\def\penulisSatu{Farel Musyaffa Arya Putra Majesta} % nama lengkap penulis pertama
 \def\penulisDua{} % nama lengkap penulis kedua
 \def\penulisTiga{} % nama lengkap penulis ketiga
 %
 % Tulis NPM Anda
 % Kosongkan npmDua dan npmTiga jika Anda melaksanakan tugas akhir/laporan secara individu
-\def\npmSatu{Nomor Anda 1} % NPM penulis pertama
+\def\npmSatu{2006596472} % NPM penulis pertama
 \def\npmDua{} % NPM penulis kedua
 \def\npmTiga{} % NPM penulis ketiga
 %
 % Tulis Program Studi yang Anda ambil
 % Kosongkan programDua dan programTiga jika Anda melaksanakan tugas akhir/laporan secara individu
-\def\programSatu{Jurusan Anda 1} % program studi penulis pertama
+\def\programSatu{Ilmu Komputer} % program studi penulis pertama
 \def\programDua{} % program studi penulis kedua
 \def\programTiga{} % program studi penulis ketiga
 %
 % Tulis Program Studi yang Anda ambil dalam bahasa inggris
 % Kosongkan programDua dan programTiga jika Anda melaksanakan tugas akhir/laporan secara individu
-\def\studyProgramSatu{Your study program 1} % 1st author's study program
+\def\studyProgramSatu{Computer Science} % 1st author's study program
 \def\studyProgramDua{} % 2nd author's study program
 \def\studyProgramTiga{} % 3rd author's study program
 
@@ -92,7 +92,7 @@
 %-----------------------------------------------------------------------------%
 %
 % Tuliskan Fakultas dimana penulis berada
-\def\fakultas{Fakultas Anda}
+\def\fakultas{Fakultas Ilmu Komputer}
 %
 % Tuliskan bulan dan tahun publikasi laporan
 \Var{\bulanTahun}{Bulan Tahun}
