--- a/config/settings.tex
+++ b/config/settings.tex
@@ -3,7 +3,7 @@
 %-----------------------------------------------------------------------------%
 %
 % Judul laporan.
-\def\judul{Judul Karya Ilmiah Anda}
+\def\judul{Network Virtualization Sebagai Solusi Sistem Lab Virtual}
 %
 % Tulis kembali judul laporan namun dengan bahasa Ingris
 \def\judulInggris{Your Scientific Publication Title}
@@ -14,7 +14,7 @@
 %-----------------------------------------------------------------------------%
 %
 % Tipe laporan, dapat berisi: Laporan Kerja Praktik, Kampus Merdeka, Skripsi, Tugas Akhir, Thesis, atau Disertasi
-\def\type{Skripsi}
+\def\type{Tugas Akhir}
 %
 % Nama jalur Kampus Merdeka (hanya perlu diisi jika tipe laporan adalah Kampus Merdeka
 % Contoh isian (khusus Fasilkom): Studi Independen, Magang Mitra, Magang BUMN, Bangkit, Apple Academy, BYOC
@@ -92,10 +92,10 @@
 %-----------------------------------------------------------------------------%
 %
 % Tuliskan Fakultas dimana penulis berada
-\def\fakultas{Fakultas Ilmu Komputer}
+\def\fakultas{Ilmu Komputer}
 %
 % Tuliskan bulan dan tahun publikasi laporan
-\Var{\bulanTahun}{Bulan Tahun}
+\Var{\bulanTahun}{Juni 2024}
 %
 % Tuliskan gelar yang akan diperoleh dengan menyerahkan laporan ini
 \def\gelar{Gelar Jurusan Anda}
